--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
 						</li>
 						<li>
 							<div class="icon"><strong>
+									<i class="icon-chat"></i>
+									Pronouns:</strong></div>
+							<span>He/Him/His</span>
+						</li>
+						<li>
+							<div class="icon"><strong>
 									<i class="icon-id"></i>
 									Date of Birth:</strong></div>
 							<span>July, 1993</span>
@@ -157,7 +163,7 @@
 							<div class="icon"><strong>
 									<i class="icon-pin"></i>
 									Location:</strong></div>
-							<span>L3, Liverpool | UK</span>
+							<span>L3, Liverpool, UK</span>
 						</li>
 						<li>
 							<div class="icon"><strong>
