--- a/Professional.html
+++ b/Professional.html
@@ -379,11 +379,16 @@
 				<div class="row">
 					<i class="fa fa-clock-o"></i>
 					<h2 style="color: black;">Wage History</h2>
-					<p style="color: rgb(24, 23, 23);">A timeline to help illustrate my progress and abition for growth. (Rounded)</p>
+					<p style="color: rgb(24, 23, 23);">A timeline that illustrates career progression and ambition for growth. (Rounded)</p>
 				</div>
 			</center><br>
 				
 			<div class="timeline" style="border:1.5px dashed #0b0161;">
+				<div class="container right">
+					<div class="content">
+						<h3 style="line-height: 4px;">2021</h3> £36500 / pa
+					</div>
+				</div>
 				<div class="container left">
 					<div class="content">
 						<h3 style="line-height: 4px;">2020</h3> £34800 / pa
@@ -401,7 +406,7 @@
 				</div>
 				<div class="container right">
 					<div class="content">
-						<h3>2017</h3> £7.90 / h
+						<h3>2017</h3> ~£7.90 / h
 					</div>
 				</div>
 				<div class="container left">
@@ -411,12 +416,12 @@
 				</div>
 				<div class="container right">
 					<div class="content">
-						<h3>2015</h3> £6.50 / h
+						<h3>2015</h3> ~£6.30 / h
 					</div>
 				</div>
 				<div class="container left">
 					<div class="content">
-						<h3>2012</h3> £5.80 / h
+						<h3>2012</h3> ~£5.80 / h
 					</div>
 				</div>
 			</div><br><br>
