--- a/Professional.html
+++ b/Professional.html
@@ -379,7 +379,7 @@
 				<div class="row">
 					<i class="fa fa-clock-o"></i>
 					<h2 style="color: black;">Wage History</h2>
-					<p style="color: rgb(24, 23, 23);">A timeline that illustrates career progression and ambition for growth. (Rounded)</p>
+					<p style="color: rgb(24, 23, 23);">A timeline that illustrates career progression and ambition for growth. (Rounded Down)</p>
 				</div>
 			</center><br>
 				
