--- a/Academia.html
+++ b/Academia.html
@@ -143,7 +143,7 @@
 				<div class="row">
 					<i class="fa fa-graduation-cap"></i>
 					<h2>South Cheshire College</h2>
-					<p>2009 - 2012</p>
+					<p>2012 - 2014</p>
 					<table>
 						<tr><td>English Literature (A2)</td><td>A</td></tr>
 						<tr><td>Mathematics (A2)</td><td>B</td></tr>
@@ -198,14 +198,14 @@
 				<h1>Contact</h1>
 			</div>
 			<p>
-				If you would like to discuss any opportunities, or ask any questions at all, please don't hesistate in
+				If you would like to discuss any opportunities, or ask any questions at all, please don't hesitate in
 				connecting through the various channels:
 			</p>
 		</div>
 
 		<div class="row contact-info">
 			<div class="col-four tab-full">
-				<a target="_blank" href="https://uk.linkedin.com/in/thomas-berey-2a1860129">
+				<a target="_blank" href="https://uk.linkedin.com/in/thomas-berey">
 					<div class="icon">
 						<i class="fa fa-linkedin" aria-hidden="true"></i>
 					</div>
