--- a/Person.html
+++ b/Person.html
@@ -104,7 +104,7 @@
                     <img src="images/profile-pic.jpg" alt="Portrait 1" style="width:125px;height:141px;border-radius:24%;">
                     <h4>A full-stack Software Developer, with years of both Front & Back-End, Professional Experience.</h4>
                     <p style="max-width: 90%;text-align: left;">Through my rewarding six years in retail and management, I can regard myself a customer experience focused person, where my thoughts and actions will always be considerate towards the user/customer journey. From there my passion has soared into information and technology, and through my experience, these two areas have highly complemented each other, in making what I develop well received and suitable for the end-user’s needs. I am thorough whilst being sociable and outgoing, who supplies a positive driving energy to any team, and I find these aspects combine to create a person who will excel in all situations while delivering above expectations. I am headstrong in ways that contribute, meaning nothing is left half done, or to a low standard. Furthermore, I love to use my initiative, needing very little in terms of guidance, and I always try to nurture that quality in others around me, but will always offer help.<img src="images/quote.png" alt="Quote" style="width:225px;height:100px;float: right;padding: 4px;padding-left: 20px;"> However I am also not afraid to ask for help, or admit a mistake and learn from it. Finally, I would say I am highly adaptive as a result of my wide areas of employment, and can readily assure you punctuality with appearance is important to me.</p>
-                    <p style="max-width: 90%;text-align: left;">Outside of working I have a strong motivation for keeping fit, as I regularly enjoy going to the gym and running. I have a strong passion and hobby in anything technology related, however my interest centres on software development, complete with an obsession into learning as many languages as possible. I am currently learning Python and SQL for Data Science, leading into ML/AI concepts, but more recently heavily delved into Golang and Typescript. Reading is also a past-time of mine, highly appreciating English Literature, especially that of the Bronte sisters. Moreover, I have been a member of the Air Training Corps, where I learned strict discipline, organisational skills and presentation at a young age, and have carried it ever since. Within three weeks of joining, I rose to the rank of First Class cadet, bearing the highest mark on the written test, despite being the cadet sitting it with the least experience there.</p>
+                    <p style="max-width: 90%;text-align: left;">Outside of working I have a strong motivation for keeping fit, as I regularly enjoy going to the gym and running. I have a strong passion and hobby in anything technology related, however my interest centres on software development, complete with an obsession into learning as many languages as possible. I am currently learning Python and SQL for Data Science, leading into ML/AI concepts, but more recently heavily delved into Golang and Typescript. Reading is also a past-time of mine, highly appreciating English Literature, especially that of the Bronte sisters. Moreover, I have been a member of the Air Training Corps, where I learned strict discipline, organizational skills and presentation at a young age, and have carried it ever since. Within three weeks of joining, I rose to the rank of First Class cadet, bearing the highest mark on the written test, despite being the cadet sitting it with the least experience there.</p>
                     <img src="images/me.jpg" alt="Portrait 2" style="width:125px;height:130px;border-radius:50%;">
 				</div>
 			</center>
@@ -126,7 +126,7 @@
 					<div class="service-content">
 						<div class="grid-2" style="font-size:14px;"><a href="images/laser-cutting.jpg" target="_blank"><img
 									src="images/laser-cutting.jpg" alt="Project 1" style="width:800px;height:250px;border:2px solid darkblue;"
-									title="Click to see full sized image."></a><h6>Laser Cutting & Engraving</h6>Being a developer requires the ability to think abstractly. This is a hobby which allows me to engage with my creative in a more simple way, by both producing the cutting template, as well as painting/decorating. Also requires some technical ability in creating the many material profiles, detetermined by variables such as reflectivity, thickness and material type. A great past-time while also being a top stress releaser.</div>
+									title="Click to see full sized image."></a><h6>Laser Cutting & Engraving</h6>Being a developer requires the ability to think abstractly. This is a hobby which allows me to engage with my creative in a more simple way, by both producing the cutting template, as well as painting/decorating. Also requires some technical ability in creating the many material profiles, determined by variables such as reflectivity, thickness and material type. A great past-time while also being a top stress releaser.</div>
 					</div>
 				</div>
 				<div class="service">
@@ -170,14 +170,14 @@
 				<h1>Contact</h1>
 			</div>
 			<p>
-				If you would like to discuss any opportunities, or ask any questions at all, please don't hesistate in
+				If you would like to discuss any opportunities, or ask any questions at all, please don't hesitate in
 				connecting through the various channels:
 			</p>
 		</div>
 
 		<div class="row contact-info">
 			<div class="col-four tab-full">
-				<a target="_blank" href="https://uk.linkedin.com/in/thomas-berey-2a1860129">
+				<a target="_blank" href="https://uk.linkedin.com/in/thomas-berey">
 					<div class="icon">
 						<i class="fa fa-linkedin" aria-hidden="true"></i>
 					</div>
