--- a/Skilled.html
+++ b/Skilled.html
@@ -104,7 +104,7 @@
 					<h4>Staff Award</h4>
 							<img src="images/myStaffAward.jpg" alt="Staff Award"
 								style="width:180px;height:240px;">
-							<p>Nominated for the Stoke City Council Staff Awards.<br>Recognised for the outstanding contribution to Stoke Council's web presence and online services.<br>'#StokeIsOnTheUp Award'; which is the culmination of our push for a digitally strong council.</p>
+							<p>Nominated for the Stoke City Council Staff Awards.<br>Recognized for the outstanding contribution to Stoke Council's web presence and online services.<br>'#StokeIsOnTheUp Award'; which is the culmination of our push for a digitally strong council.</p>
 				</div>
 			</center>
 		</div><br>
@@ -148,7 +148,7 @@
 						- Health & Safety and Evacuation; <i style="font-size:small;">2016/17/18/19/20/21 -</i><br>
 						- Fire Warden; <i style="font-size:small;">2016/17/18 -</i><br>
 						- 'Manager Left in Charge'; <i style="font-size:small;">2016/17 -</i><br>
-						- Negotiating and Business Practises; <i style="font-size:small;">2018 -</i><br><br>
+						- Negotiating and Business Practices; <i style="font-size:small;">2018 -</i><br><br>
 						- Office & Documentation proficient, such as Word, Excel, PDF, Open Office, etc.<br>
 						- Computer Software & Hardware literate. Comfortable using any software, and pc maintenance/builds.<br>
 						- Professional experience & competence in software development, Client & Server, using various IDEs.<br>
@@ -167,14 +167,14 @@
 				<h1>Contact</h1>
 			</div>
 			<p>
-				If you would like to discuss any opportunities, or ask any questions at all, please don't hesistate in
+				If you would like to discuss any opportunities, or ask any questions at all, please don't hesitate in
 				connecting through the various channels:
 			</p>
 		</div>
 
 		<div class="row contact-info">
 			<div class="col-four tab-full">
-				<a target="_blank" href="https://uk.linkedin.com/in/thomas-berey-2a1860129">
+				<a target="_blank" href="https://uk.linkedin.com/in/thomas-berey">
 					<div class="icon">
 						<i class="fa fa-linkedin" aria-hidden="true"></i>
 					</div>
