--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<li><a class="hover-anchor" href="Professional.html">Professional</a></li>
 							<li><a class="hover-anchor" href="Skilled.html">Skilled</a></li>
 							<li><a class="hover-anchor" target="_blank" href="game/index.html">Play</a></li>
-							<li><a class="hover-anchor" target="_blank" href="organiser/index.html">Organise</a></li>
+							<li><a class="hover-anchor" target="_blank" href="organiser/index.html">Organize</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -93,7 +93,7 @@
 						<a class="button stroke" target="_blank" href="files\CV.pdf"
 							title="Curriculum Vitae - Tom Berey" download="Curriculum Vitae - Tom Berey">Download My
 							CV</a><br>
-						<sub> (pdf, 106.2kb)</sub>
+						<sub> (pdf, 107.1 kB)</sub>
 					</div>
 				</div>
 			</div>
@@ -108,7 +108,7 @@
 						<center>
 							<p style="color:#222222;">
 								Hi, my name's Tom - Welcome to my ePortfolio site!<br>
-								I am a Software developer, who has a driving <b>passion</b> for anything technology or
+								I am a full-stack Software developer, who has a driving <b>passion</b> for anything technology or
 								development related, coupled with <b>limitless</b> amounts of both <b>enthusiasm</b> and
 								<b>positivity</b>. I am constantly on the lookout for new technologies, or build upon
 								existing,
@@ -169,7 +169,7 @@
 							<div class="icon"><strong>
 									<i class="icon-link"></i>
 									Social:</strong></div>
-							<span><a href="https://uk.linkedin.com/in/thomas-berey-2a1860129"
+							<span><a href="https://uk.linkedin.com/in/thomas-berey"
 									target="_blank"><u>LinkedIn</u> | </a><a href="https://www.github.com/tberey"
 									target="_blank"><u>Github</u></a></span>
 						</li>
@@ -284,14 +284,14 @@
 						<div class="service-content">
 							<div class="grid-2" style="font-size:14px;"><a href="images/dev-standards.png" target="_blank"><img
 										src="images/dev-standards.png" alt="Project 4" style="width:900px;height:180px;border:2px solid darkblue;"
-										title="Click to see full sized image."></a><h6>Clean, Clear & Robust</h6>Well written and organised code, that lends itself to readability, and adheres to conventions or standard practises. This all creates minimal friction within development teams, between PRs and branches, allowing developers to easily jump in at any point.</div>
+										title="Click to see full sized image."></a><h6>Clean, Clear & Robust</h6>Well written and organized code, that lends itself to readability, and adheres to conventions or standard practices. This all creates minimal friction within development teams, between PRs and branches, allowing developers to easily jump in at any point.</div>
 						</div>
 					</div>
 					<div class="service">
 						<div class="service-content">
 							<div class="grid-2" style="font-size:14px;"><a href="images/logging-sample.png" target="_blank"><img
 										src="images/logging-sample.png" alt="Project 8" style="width:900px;height:180px;border:2px solid darkblue;"
-										title="Click to see full sized image."></a><h6 style="font-size: 12.2px;">Self-Developed Comprehensive Logging</h6>Detailed, reliabe and consistent logging, that extensively penetrates any system, application or project. A self-developed NPM package & module, that can be seemlessly incorprotated into any project, (used in all personal projects). Suitable for comprehensive debugging, in both development and production.</div>
+										title="Click to see full sized image."></a><h6 style="font-size: 12.2px;">Self-Developed Comprehensive Logging</h6>Detailed, reliable and consistent logging, that extensively penetrates any system, application or project. A self-developed NPM package & module, that can be seamlessly incorporated into any project, (used in all personal projects). Suitable for comprehensive debugging, in both development and production.</div>
 						</div>
 					</div>
 					<div class="service">
@@ -316,7 +316,7 @@
 						<div class="service-content">
 							<div class="grid-2" style="font-size:14px;"><a href="images/proj-spotlight.png" target="_blank"><img
 										src="images/proj-spotlight.png" alt="Project 5" style="width:900px;height:180px;border:2px solid darkblue;"
-										title="Click to see full sized image."></a><h6>TypeScript</h6>A graphing data and analysis tool. This application collects data from social media sources, to extrapolate and illustrate potential stock movements or trends. Presented in a graphical format, providing options to get the data you need and view it in the best way for you. Utilises AWS S3, for CSV exports storage/retrieval.</div>
+										title="Click to see full sized image."></a><h6>TypeScript</h6>A graphing data and analysis tool. This application collects data from social media sources, to extrapolate and illustrate potential stock movements or trends. Presented in a graphical format, providing options to get the data you need and view it in the best way for you. Utilizes AWS S3, for CSV exports storage/retrieval.</div>
 						</div>
 					</div>
 					<div class="service">
@@ -372,7 +372,7 @@
 				<div class="col-six tab-full">
 					<div class="grid-2">
 						<center><h3>'Social Stocks'</h3></center>
-						<p>This project, Social Stocks, is a graphing data and analysis tool. This web, or desktop (electron), application collects data from social media sources (such as the Twitter or Reddit APIs), as well as on google search trends, to extrapolate and illustrate potential stock movements or trends, into a user-friendly graphical format. There are many options in order to get the data you need and view it in the best way for you. Utilises AWS S3, for CSV exports storage and retrieval.</p>
+						<p>This project, Social Stocks, is a graphing data and analysis tool. This web, or desktop (Electron), application collects data from social media sources (such as the Twitter or Reddit APIs), as well as on google search trends, to extrapolate and illustrate potential stock movements or trends, into a user-friendly graphical format. There are many options in order to get the data you need and view it in the best way for you. Utilizes AWS S3, for CSV exports storage and retrieval.</p>
 							<center><b><u><a href="https://github.com/tberey/social-stocks#readme"
 							class="button stroke" target="_blank">View Project</a></u></b></center>
 					</div>
@@ -388,14 +388,14 @@
 					<h1>Contact</h1>
 				</div>
 				<p>
-					If you would like to discuss any opportunities, or ask any questions at all, please don't hesistate in
+					If you would like to discuss any opportunities, or ask any questions at all, please don't hesitate in
 					connecting through the various channels:
 				</p>
 			</div>
 
 			<div class="row contact-info">
 				<div class="col-four tab-full">
-					<a target="_blank" href="https://uk.linkedin.com/in/thomas-berey-2a1860129">
+					<a target="_blank" href="https://uk.linkedin.com/in/thomas-berey">
 						<div class="icon">
 							<i class="fa fa-linkedin" aria-hidden="true"></i>
 						</div>
