--- a/Professional.html
+++ b/Professional.html
@@ -127,7 +127,7 @@
 
 		/* Media queries - Responsive timeline on screens less than 600px wide */
 		@media screen and (max-width: 600px) {
-		/* Place the timelime to the left */
+		/* Place the timeline to the left */
 		.timeline::after {
 		left: 31px;
 		}
@@ -245,7 +245,7 @@
                     <h3>Crown Commercial Service</h3>
 					<p>2020 - Present; Liverpool, Merseyside</p>
                     <p style="font-size:medium;max-width: 90%;">Full-Stack development role, working in an Agile manner, primarily and heavily focused on Server-Side. Current role.<br>
-					Working under an Agile methodology, consisting of sprints in line with our deployment conditions, this role is both project and team based, often utilising microservice architecture and many other moving parts. My current tech stack includes Ruby with Rails, Docker, CloudFoundry, PSQL and AWS services, however this changes per project requirements, which extends into other languages such as Java, and C#, among others. Projects I work on vary, but include designing complicated APIs, both web and app based, as well as reliance on a strong, robust and secure communication between our technologies. Furthermore, due to often using SOA/Microservice architecture, I am often required to integrate into other external APIs or services, resulting in complex systems under my development. These projects are managed by a product owner, and includes testers, business analysts, as well as developers, so it is a heavy team effort that requires communication, understanding and planning, while timekeeping is a must.</p>
+					Working under an Agile methodology, consisting of sprints in line with our deployment conditions, this role is both project and team based, often utilizing microservice architecture and many other moving parts. My current tech stack includes Ruby with Rails, Docker, CloudFoundry, PSQL and AWS services, however this changes per project requirements, which extends into other languages such as Java, and C#, among others. Projects I work on vary, but include designing complicated APIs, both web and app based, as well as reliance on a strong, robust and secure communication between our technologies. Furthermore, due to often using SOA/Microservice architecture, I am often required to integrate into other external APIs or services, resulting in complex systems under my development. These projects are managed by a product owner, and includes testers, business analysts, as well as developers, so it is a heavy team effort that requires communication, understanding and planning, while timekeeping is a must.</p>
 					<div class="icon"><strong style="font-size: small;font-style: italic;font-weight: 800;">
 						<i class="icon-earth"></i>
 						&nbsp;www.crowncommercial.gov.uk</strong></div>
@@ -312,7 +312,7 @@
                     <h3>Next Retail Plc.</h3>
 					<p>2016 - 2017; Newcastle-Under-Lyme, Staffordshire</p>
                     <p style="font-size:medium;max-width: 90%;">I was responsible for our store’s deliveries, each department’s stock and the Stock Team; in turn whose job it was to process and replenish the deliveries of stock, all falling under the Delivery Department. Our department were required to prepare the stock for shop floor sale in our store, in a time sensitive environment, working to an efficiency rate set by head office to meet the demand. By always driving my team to work past this efficiency rate, my team would always see the benefits of bonus pay.</p>
-                    <p style="font-size:medium;max-width: 90%;">Further responsibilities included being the most senior member of staff in store while my team and I worked, having to lock up and alarm the store after a delivery shift, leaving it at a standard ready to open and serve customers the following morning. I also have training & experience in handling the store cash float, plus accounting for daily profits. Health & safety awareness, confidence in delegating staff and time management were qualities required for this role, as well as being personally organised, motivated and responsible.</p>
+                    <p style="font-size:medium;max-width: 90%;">Further responsibilities included being the most senior member of staff in store while my team and I worked, having to lock up and alarm the store after a delivery shift, leaving it at a standard ready to open and serve customers the following morning. I also have training & experience in handling the store cash float, plus accounting for daily profits. Health & safety awareness, confidence in delegating staff and time management were qualities required for this role, as well as being personally organized, motivated and responsible.</p>
 					<div class="icon"><strong style="font-size: small;font-style: italic;font-weight: 800;">
 						<i class="icon-earth"></i>
 						&nbsp;www.next.co.uk</strong></div>
@@ -359,8 +359,8 @@
 					<h2>Stockroom Assistant</h2>
                     <h3>Next Retail Plc.</h3>
 					<p>2012 - 2014, 2015; Crewe, Cheshire</p>
-                    <p style="font-size:medium;max-width: 90%;">A warehouse role, where responsibilities were logistical based, centred on receiving, processing and preparing delivered clothing and home stock for retail display and sale. This included replenishing the necessary stock in conjunction with the store’s sales and replenishment requirements. Efficiency and motivation were elements emphasised in this role, while teamwork and organisational skills were vital.</p>
-                    <p style="font-size:medium;max-width: 90%;font-weight: 900;"><div style="font-weight: 800;">Team Coach (2014)</div>This was a recognised position I held parallel with the Stockroom Assistant position, with the extra responsibilities of training and supporting new staff. A strong level of confidence and maturity were required, while being able to motivate others and knowing the role well.</p>
+                    <p style="font-size:medium;max-width: 90%;">A warehouse role, where responsibilities were logistical based, centred on receiving, processing and preparing delivered clothing and home stock for retail display and sale. This included replenishing the necessary stock in conjunction with the store’s sales and replenishment requirements. Efficiency and motivation were elements emphasized in this role, while teamwork and organizational skills were vital.</p>
+                    <p style="font-size:medium;max-width: 90%;font-weight: 900;"><div style="font-weight: 800;">Team Coach (2014)</div>This was a recognized position I held parallel with the Stockroom Assistant position, with the extra responsibilities of training and supporting new staff. A strong level of confidence and maturity were required, while being able to motivate others and knowing the role well.</p>
 					<div class="icon"><strong style="font-size: small;font-style: italic;font-weight: 800;">
 						<i class="icon-earth"></i>
 						&nbsp;www.next.co.uk</strong></div>
@@ -435,14 +435,14 @@
 				<h1>Contact</h1>
 			</div>
 			<p>
-				If you would like to discuss any opportunities, or ask any questions at all, please don't hesistate in
+				If you would like to discuss any opportunities, or ask any questions at all, please don't hesitate in
 				connecting through the various channels:
 			</p>
 		</div>
 
 		<div class="row contact-info">
 			<div class="col-four tab-full">
-				<a target="_blank" href="https://uk.linkedin.com/in/thomas-berey-2a1860129">
+				<a target="_blank" href="https://uk.linkedin.com/in/thomas-berey">
 					<div class="icon">
 						<i class="fa fa-linkedin" aria-hidden="true"></i>
 					</div>
