--- a/Person.html
+++ b/Person.html
@@ -126,14 +126,14 @@
 					<div class="service-content">
 						<div class="grid-2" style="font-size:14px;"><a href="images/laser-cutting.jpg" target="_blank"><img
 									src="images/laser-cutting.jpg" alt="Project 1" style="width:800px;height:250px;border:2px solid darkblue;"
-									title="Click to see full sized image."></a><h6>Laser Cutting & Engraving</h6>Being a developer requires the ability to think abstractly. This is a hobby which allows me to engage with my creative in a more simple way, by both producing the cutting template, as well as painting/decorating. Also requires some technical ability in creating the many material profiles, determined by variables such as reflectivity, thickness and material type. A great past-time while also being a top stress releaser.</div>
+									title="Click to see full sized image."></a><h6>Laser Cutting & Engraving</h6>Being a developer requires the ability to think abstractly. This is a hobby which allows me to engage with my creative in a more applied way, in both producing the cutting template, as well as painting/decorating. Also requires technical ability in creating the many material profiles, determined by variables like reflectivity, thickness and material type. A great past-time while also being a top stress releaser. I have produced designs, engravings and models from various materials such as wood (hard & soft), acrylic plastics, and also dulled variant of metals like aluminium or copper</div>
 					</div>
 				</div>
 				<div class="service">
 					<div class="service-content">
 						<div class="grid-2" style="font-size:14px;"><a href="images/invest.png" target="_blank"><img
 									src="images/invest.png" alt="Project 2" style="width:800px;height:250px;border:2px solid darkblue;"
-									title="Click to see full sized image."></a><h6>Market Investing</h6>I first introduced myself to investing in 2017, during the initial cryptocurrency bull run. Tasting success there, naturally I was hooked and it led me to reading books such as Graham's 'The Intelligent Investor' and also 'Harriman's Book of Investing Rules', and in turn participating in creasing markets and market movements. I gained a huge passion for it, and as such, it has led to investments in many diverse securities, across both the Stock Market and the Options Market, over the years.</div>
+									title="Click to see full sized image."></a><h6>Market Investing</h6>I first introduced myself to investing in 2017, during the initial cryptocurrency bull run, turning a free £20 sign-up bonus into £200+. Tasting success, naturally I was hooked and it led me to reading books such as Graham's 'The Intelligent Investor' and also 'Harriman's Book of Investing Rules' among others, and in turn participating in creasing markets and market movements. I gained a huge passion for it, and as such, it has led to investments in many diverse securities, across both the Stock Market and the Derivatives Market (options), over the years. Most recently I have been able to fund myself a housing deposit at 5% of my budget, only setting the goal 9 months prior.</div>
 					</div>
 				</div>
 				<div class="service">
