--- a/Person.html
+++ b/Person.html
@@ -126,7 +126,7 @@
 					<div class="service-content">
 						<div class="grid-2" style="font-size:14px;"><a href="images/laser-cutting.jpg" target="_blank"><img
 									src="images/laser-cutting.jpg" alt="Project 1" style="width:800px;height:250px;border:2px solid darkblue;"
-									title="Click to see full sized image."></a><h6>Laser Cutting & Engraving</h6>Being a developer requires the ability to think abstractly. This is a hobby which allows me to engage with my creative in a more applied way, in both producing the cutting template, as well as painting/decorating. Also requires technical ability in creating the many material profiles, determined by variables like reflectivity, thickness and material type. A great past-time while also being a top stress releaser. I have produced designs, engravings and models from various materials such as wood (hard & soft), acrylic plastics, and also dulled variant of metals like aluminium or copper</div>
+									title="Click to see full sized image."></a><h6>Laser Cutting & Engraving</h6>Being a developer requires the ability to think abstractly. This is a hobby which allows me to engage with my creative in a more applied way, in both producing the cutting template, as well as painting/decorating. Also requires technical ability in creating the many material profiles, determined by variables like reflectivity, thickness, material type and laser strength. A great past-time while also being a top stress releaser. I have produced designs, engravings and models from various materials such as wood (hard & soft), acrylic plastics, and also dulled variant of metals like aluminium or copper</div>
 					</div>
 				</div>
 				<div class="service">
