--- a/Person.html
+++ b/Person.html
@@ -146,7 +146,7 @@
 					<div class="service-content">
 						<div class="grid-2" style="font-size:14px;"><a href="images/laser-running.gif" target="_blank"><img
 									src="images/laser-running.gif" alt="Project 2" style="width:250px;height:250px;border:2px solid darkblue;"
-									title="Click to see full sized image."></a><h6>Algorithmic Trading</h6>Stemming from my passion of trading and the markets, I have sought to automate various day trading strategies, using the MT4 (MeteTrader) Platform. This has been largely successful, but is still an ongoing journey.</div>
+									title="Click to see full sized image."></a><h6>Algorithmic Trading</h6>Stemming from my passion of trading and the markets, I have sought to automate various day trading strategies, using the MT4 (MetaTrader) Platform. This has been largely successful, but is still an ongoing journey.</div>
 					</div>
 				</div>
 				</div>
