--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 								is
 								are aspects that I consider the most important part of my own, or any, character profile, before any technical skills
 								or
-								projects.<br><br>
+								projects. <a class="hover-anchor" href="Person.html">Learn more about me by clicking here...</a><br><br>
 								<i><b>But please, don't just take my word, explore my site and see everything for
 										yourself!</b></i>
 							</p>
