--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
 								is
 								are aspects that I consider the most important part of my own, or any, character profile, before any technical skills
 								or
-								projects. <a class="hover-anchor" style="color: #000000;" href="Person.html">Learn more about my me by clicking here...</a><br><br>
+								projects. <a class="hover-anchor" style="font-weight: 800;" href="Person.html">(Learn more about my me by clicking here)</a><br><br>
 								<i><b>But please, don't just take my word, explore my site and see everything for
 										yourself!</b></i>
 							</p>
 						</center>
 					</div>
 				</div>
-			</div>
+			</div><br>
 			<div class="row intro-content">
 				<div class="col-six tab-full">
 					<h3>Contact Information:</h3>
