--- a/Academia.html
+++ b/Academia.html
@@ -150,7 +150,7 @@
 						<tr><td>Physics (A2)</td><td>B</td></tr>
 						<tr><td>Computing (AS)</td><td style="font-style: italic;">PASS</td></tr>
 						<tr><td>Chemistry (AS)</td><td style="font-style: italic;">PASS</td></tr>
-						<tr><td style="font-style: italic;">Active member of sports societies;<br>
+						<tr><td style="font-style: italic;">Active member of sports societies;<br><br>
 							Optionally studied extra Maths modules.</td><td style="font-style: italic;"></td></tr>
 					</table>
 					<div class="icon"><strong style="font-size: small;font-style: italic;font-weight: 800;">
