--- a/Academia.html
+++ b/Academia.html
@@ -151,7 +151,7 @@
 						<tr><td>Computing (AS)</td><td style="font-style: italic;">PASS</td></tr>
 						<tr><td>Chemistry (AS)</td><td style="font-style: italic;">PASS</td></tr>
 						<tr><td style="font-style: italic;">Active member of sports societies;<br><br>
-							Optionally studied extra Maths modules.</td><td style="font-style: italic;"></td></tr>
+							Freely studied extra Maths module<br><div style="font-size: smaller;font-style: italic;">(Grade B).</div></td><td style="font-style: italic;"></td></tr>
 					</table>
 					<div class="icon"><strong style="font-size: small;font-style: italic;font-weight: 800;">
 						<i class="icon-earth"></i>
