--- a/Academia.html
+++ b/Academia.html
@@ -119,7 +119,7 @@
 					<p>2004 - 2009</p>
 					<table>
 						<tr><td>11 GCSEs<div style="font-size: smaller;font-style: italic;">Maths: B | English: A,B | Science: B,B,B</div></td><td>A - B</td></tr>
-						<tr><td style="font-style: italic;">Volunteer Member of Student Support Team<div style="font-size: smaller;font-style: italic;">(Application/Interview, 2005–07);</div><br>
+						<tr><td style="font-style: italic;font-size:83%">Volunteer Member of Student Support Team<div style="font-size: smaller;font-style: italic;">(Application/Interview, 2005–07);</div><br>
 							School Prefect<div style="font-size: smaller;font-style: italic;">(Application/Interview, 2008–09);</div><br>
 							Student Council Representative<div style="font-size: smaller;font-style: italic;">(Elected, 2005–07).</div></td><td style="font-style: italic;"></td></tr>
 					</table>
@@ -150,7 +150,7 @@
 						<tr><td>Physics (A2)</td><td>B</td></tr>
 						<tr><td>Computing (AS)</td><td style="font-style: italic;">PASS</td></tr>
 						<tr><td>Chemistry (AS)</td><td style="font-style: italic;">PASS</td></tr>
-						<tr><td style="font-style: italic;">Active member of sports societies;<br><br>
+						<tr><td style="font-style: italic;font-size:83%">Active member of sports societies;<br><br>
 							Freely studied extra Maths module<br><div style="font-size: smaller;font-style: italic;">(Grade B).</div></td><td style="font-style: italic;"></td></tr>
 					</table>
 					<div class="icon"><strong style="font-size: small;font-style: italic;font-weight: 800;">
@@ -176,7 +176,7 @@
 					<p>2014 - 2015</p>
 					<table>
 						<tr><td>Mathematics (BSc)</td><td>CertHE</td></tr>
-						<tr><td style="font-style: italic;">Sports Society Captain<div style="font-size: smaller;font-style: italic;">(Elected, 2015);</div><br>
+						<tr><td style="font-style: italic;font-size:83%">Sports Society Captain<div style="font-size: smaller;font-style: italic;">(Elected, 2015);</div><br>
 							Optionally studied extra English elective<div style="font-size: smaller;font-style: italic;">(Grade 2:1).</div>
 						</td><td style="font-style: italic;"></td></tr>
 					</table>
