--- a/Academia.html
+++ b/Academia.html
@@ -118,7 +118,7 @@
 					<h2>Middlewich High School</h2>
 					<p>2004 - 2009</p>
 					<table>
-						<tr><td>11 GCSEs<div style="font-size: smaller;font-style: italic;">Maths: B | English: A,B | Science: B,B,B</div></td><td>A - B</td></tr>
+						<tr><td>11 GCSEs<div style="font-size: smaller;">Maths: B | English: A,B | Science: B,B,B</div></td><td>A - B</td></tr>
 						<tr><td style="font-style: italic;font-size:83%">Volunteer Member of Student Support Team<div style="font-size: smaller;font-style: italic;">(Application/Interview, 2005–07);</div><br>
 							School Prefect<div style="font-size: smaller;font-style: italic;">(Application/Interview, 2008–09);</div><br>
 							Student Council Representative<div style="font-size: smaller;font-style: italic;">(Elected, 2005–07).</div></td><td style="font-style: italic;"></td></tr>
