--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 					</ul>
 				</div>
 				<div class="col-six tab-full">
-					<h3>TOP COMPETENCIES:</h3>
+					<h3>Quick-View Competencies:</h3>
 					<ul class="skill-bars">
 						<li>
 							<div class="progress percent95"></div>
